@startuml

title __ORDERS's Class Diagram__\n

  namespace com.example.foodliveryapp {
    namespace recycler.orders {
      class com.example.foodliveryapp.recycler.orders.Order {
          - orderAddress : String
          - orderNumber : String
          - orderStatus : int
          - orderTime : String
          - price : String
          - priceType : String
          - restaurantAddress : String
          - restaurantName : String
          + Order()
          + setOrderAddress()
          + setOrderTime()
          + setPrice()
          + setPriceType()
          + setRestaurantAddress()
          + setRestaurantName()
          ~ getOrderAddress()
          ~ getOrderNumber()
          ~ getOrderStatus()
          ~ getOrderTime()
          ~ getPrice()
          ~ getPriceType()
          ~ getRestaurantAddress()
          ~ getRestaurantName()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.orders {
      class com.example.foodliveryapp.recycler.orders.OrdersListAdapter {
          - context : Context
          - orderList : List<Order>
          + OrdersListAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          - getOrderColor()
      }
    }
  }
  

  namespace com.example.foodliveryapp {
    namespace recycler.orders {
      class com.example.foodliveryapp.recycler.orders.OrdersListAdapter.ViewHolder {
          ~ frameLayout : FrameLayout
          ~ itemLayout : LinearLayout
          ~ orderAddressTextView : TextView
          ~ orderTimeTextView : TextView
          ~ priceTextView : TextView
          ~ priceTypeTextView : TextView
          ~ restaurantAddresTextView : TextView
          ~ restaurantNameTextView : TextView
          + ViewHolder()
      }
    }
  }
  

  com.example.foodliveryapp.recycler.orders.OrdersListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodliveryapp.recycler.orders.OrdersListAdapter +-down- com.example.foodliveryapp.recycler.orders.OrdersListAdapter.ViewHolder
  com.example.foodliveryapp.recycler.orders.OrdersListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
